// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonTests Buttons can be disabled 1`] = `
{
  "AccessibilityRole": "Button",
  "AccessibilityStateDisabled": true,
  "AutomationId": "disabled_button",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 38,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": "#00FFFFFF",
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "3,3,3,3",
          "FlowDirection": "LeftToRight",
          "Height": 38,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Background": "#4DF9F9F9",
              "BorderBrush": "#0F000000",
              "BorderThickness": "1,1,1,1.5",
              "Clip": null,
              "CornerRadius": "3,3,3,3",
              "FlowDirection": "LeftToRight",
              "Height": 38,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 35,
                  "HorizontalAlignment": "Stretch",
                  "Left": 1,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 1,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 716,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "AccessibilityStateDisabled": true,
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#5C000000",
                      "Height": 19,
                      "HorizontalAlignment": "Stretch",
                      "Left": 8,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Text": "Submit Application",
                      "Top": 8,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 700,
                      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`ButtonTests Buttons can have accessibility labels 1`] = `
{
  "AccessibilityRole": "Button",
  "AutomationId": "accessibilityLabel_button",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 37,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": "#00FFFFFF",
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "3,3,3,3",
          "FlowDirection": "LeftToRight",
          "Height": 37,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Background": "#FF007AFF",
              "BorderBrush": "Windows.UI.Xaml.Media.LinearGradientBrush",
              "BorderThickness": "1,1,1,1.5",
              "Clip": null,
              "CornerRadius": "3,3,3,3",
              "FlowDirection": "LeftToRight",
              "Height": 37,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 35,
                  "HorizontalAlignment": "Stretch",
                  "Left": 1,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 1,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 716,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#E4000000",
                      "Height": 19,
                      "HorizontalAlignment": "Stretch",
                      "Left": 8,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Text": "Submit Application",
                      "Top": 8,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 700,
                      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`ButtonTests Buttons can have accessibility props 1`] = `
{
  "AccessibilityRole": "Button",
  "AutomationId": "accessibility_props",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 37,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": "#B3FFFFFF",
          "BorderBrush": "Windows.UI.Xaml.Media.LinearGradientBrush",
          "BorderThickness": "1,1,1,1.5",
          "Clip": null,
          "CornerRadius": "3,3,3,3",
          "FlowDirection": "LeftToRight",
          "Height": 37,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 35,
              "HorizontalAlignment": "Stretch",
              "Left": 1,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 1,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 716,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 35,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 716,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#E4000000",
                      "Height": 19,
                      "HorizontalAlignment": "Stretch",
                      "Left": 8,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Text": "Submit Application",
                      "Top": 8,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 700,
                      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`ButtonTests Buttons can have accessibility states 1`] = `
{
  "AccessibilityRole": "Button",
  "AccessibilityStateDisabled": true,
  "AutomationId": "accessibilityState_button",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 38,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": "#00FFFFFF",
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "3,3,3,3",
          "FlowDirection": "LeftToRight",
          "Height": 38,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Background": "#4DF9F9F9",
              "BorderBrush": "#0F000000",
              "BorderThickness": "1,1,1,1.5",
              "Clip": null,
              "CornerRadius": "3,3,3,3",
              "FlowDirection": "LeftToRight",
              "Height": 38,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 35,
                  "HorizontalAlignment": "Stretch",
                  "Left": 1,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 1,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 716,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "AccessibilityStateDisabled": true,
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#5C000000",
                      "Height": 19,
                      "HorizontalAlignment": "Stretch",
                      "Left": 8,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Text": "Submit Application",
                      "Top": 8,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 700,
                      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`ButtonTests Buttons can have custom colors 1`] = `
{
  "AccessibilityRole": "Button",
  "AutomationId": "cancel_button",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 37,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": "#00FFFFFF",
          "BorderBrush": "#E4000000",
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "3,3,3,3",
          "FlowDirection": "LeftToRight",
          "Height": 37,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Background": "#FFFF3B30",
              "BorderBrush": "Windows.UI.Xaml.Media.LinearGradientBrush",
              "BorderThickness": "1,1,1,1.5",
              "Clip": null,
              "CornerRadius": "3,3,3,3",
              "FlowDirection": "LeftToRight",
              "Height": 37,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 35,
                  "HorizontalAlignment": "Stretch",
                  "Left": 1,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 1,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 716,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#E4000000",
                      "Height": 19,
                      "HorizontalAlignment": "Stretch",
                      "Left": 8,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Text": "Cancel Application",
                      "Top": 8,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 700,
                      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`ButtonTests Buttons can have their accessibility and keyboard focus disabled 1`] = `
{
  "AutomationId": "accessible_focusable_button",
  "Background": null,
  "BorderBrush": "#E4000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 150,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": [
    {
      "AccessibilityRole": "Button",
      "AutomationId": "default_button",
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 38,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewControl",
      "children": [
        {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
          "children": [
            {
              "Background": "#B3FFFFFF",
              "BorderBrush": "Windows.UI.Xaml.Media.LinearGradientBrush",
              "BorderThickness": "1,1,1,1.5",
              "Clip": null,
              "CornerRadius": "3,3,3,3",
              "FlowDirection": "LeftToRight",
              "Height": 38,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 35,
                  "HorizontalAlignment": "Stretch",
                  "Left": 1,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 1,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 716,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "Background": null,
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 35,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 716,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                      "children": [
                        {
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#E4000000",
                          "Height": 19,
                          "HorizontalAlignment": "Stretch",
                          "Left": 8,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Text": "Default Button",
                          "Top": 8,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 700,
                          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    {
      "AccessibilityRole": "Button",
      "AutomationId": "accessible_false_button",
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 37,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 38,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewControl",
      "children": [
        {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
          "children": [
            {
              "Background": "#B3FFFFFF",
              "BorderBrush": "Windows.UI.Xaml.Media.LinearGradientBrush",
              "BorderThickness": "1,1,1,1.5",
              "Clip": null,
              "CornerRadius": "3,3,3,3",
              "FlowDirection": "LeftToRight",
              "Height": 37,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 35,
                  "HorizontalAlignment": "Stretch",
                  "Left": 1,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 1,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 716,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "Background": null,
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 35,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 716,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                      "children": [
                        {
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#E4000000",
                          "Height": 19,
                          "HorizontalAlignment": "Stretch",
                          "Left": 8,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Text": "Button with accessible=false",
                          "Top": 8,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 700,
                          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    {
      "AccessibilityRole": "Button",
      "AutomationId": "focusable_false_button",
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 38,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 75,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewControl",
      "children": [
        {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
          "children": [
            {
              "Background": "#B3FFFFFF",
              "BorderBrush": "Windows.UI.Xaml.Media.LinearGradientBrush",
              "BorderThickness": "1,1,1,1.5",
              "Clip": null,
              "CornerRadius": "3,3,3,3",
              "FlowDirection": "LeftToRight",
              "Height": 38,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 35,
                  "HorizontalAlignment": "Stretch",
                  "Left": 1,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 1,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 716,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "Background": null,
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 35,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 716,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                      "children": [
                        {
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#E4000000",
                          "Height": 19,
                          "HorizontalAlignment": "Stretch",
                          "Left": 8,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Text": "Button with focusable=false",
                          "Top": 8,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 700,
                          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    {
      "AccessibilityRole": "Button",
      "AutomationId": "accessible_focusable_false_button",
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "Height": 37,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 113,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewControl",
      "children": [
        {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
          "children": [
            {
              "Background": "#B3FFFFFF",
              "BorderBrush": "Windows.UI.Xaml.Media.LinearGradientBrush",
              "BorderThickness": "1,1,1,1.5",
              "Clip": null,
              "CornerRadius": "3,3,3,3",
              "FlowDirection": "LeftToRight",
              "Height": 37,
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 718,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 35,
                  "HorizontalAlignment": "Stretch",
                  "Left": 1,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 1,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 716,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "Background": null,
                      "BorderBrush": "#E4000000",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 35,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 716,
                      "XamlType": "Microsoft.ReactNative.ViewPanel",
                      "children": [
                        {
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "Foreground": "#E4000000",
                          "Height": 19,
                          "HorizontalAlignment": "Stretch",
                          "Left": 8,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Text": "Button with accessible=false and focusable=false",
                          "Top": 8,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 700,
                          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`ButtonTests Buttons have default styling 1`] = `
{
  "AccessibilityRole": "Button",
  "AutomationId": "button_default_styling",
  "Background": null,
  "BorderBrush": null,
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 38,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewControl",
  "children": [
    {
      "Background": null,
      "BorderBrush": null,
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Foreground": "#FF000000",
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Padding": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
      "children": [
        {
          "Background": "#B3FFFFFF",
          "BorderBrush": "Windows.UI.Xaml.Media.LinearGradientBrush",
          "BorderThickness": "1,1,1,1.5",
          "Clip": null,
          "CornerRadius": "3,3,3,3",
          "FlowDirection": "LeftToRight",
          "Height": 38,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Microsoft.ReactNative.ViewPanel",
          "children": [
            {
              "Background": null,
              "BorderBrush": "#E4000000",
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "Height": 35,
              "HorizontalAlignment": "Stretch",
              "Left": 1,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 1,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "Width": 716,
              "XamlType": "Microsoft.ReactNative.ViewPanel",
              "children": [
                {
                  "Background": null,
                  "BorderBrush": "#E4000000",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Height": 35,
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "Width": 716,
                  "XamlType": "Microsoft.ReactNative.ViewPanel",
                  "children": [
                    {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#E4000000",
                      "Height": 19,
                      "HorizontalAlignment": "Stretch",
                      "Left": 8,
                      "Margin": "0,0,0,0",
                      "Padding": "0,0,0,0",
                      "Text": "Submit Application",
                      "Top": 8,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 700,
                      "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;
